[metadata]
name = volt
summary = Openstack service to tracker the volumes in nova and cinder, provide attachment information for vmthunder service.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    volt

[entry_points]
volt.executor =
    btree = volt.executor.impl_btree:BtreeExecutor
    btreewithuncle = volt.executor.impl_btree:BtreeWithUncleExecutor

console_scripts =
    volt-api = volt.cmd.api:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = volt/locale
domain = volt

[update_catalog]
domain = volt
output_dir = volt/locale
input_file = volt/locale/volt.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = volt/locale/volt.pot
